[package]
name = "simple-aprs"
version = "0.1.0"
authors = ["Dave Lewis <dave@dllewis.org>"]
edition = "2018"
description = "APRS Library to interact with APRS-IS servers"
license = "MIT"
exclude = [".gitignore"]

[dependencies]
aprs = "0.3.1"
bytes = "0.6.0"
fap = "0.2.1"
futures = "0.3"
log = "0.4.11"
tokio = { version = "0.3.4", default-features=false, features=["full"] }
tokio-util = { version = "0.5.0", features = ["codec"] }

[dev-dependencies]
arguments = "0.6.2"
pretty_env_logger = "0.4"
