[package]
name = "simple-aprs"
version = "0.2.0"
authors = ["Dave Lewis <dave@dllewis.org>"]
edition = "2018"
description = "APRS Library to interact with APRS-IS servers"
readme = "README.md"
keywords = ["aprs", "amateur-radio"]
license = "MIT"
repository = "https://github.com/welshdave/simple-aprs.git"
exclude = [".gitignore"]

[dependencies]
aprs = "0.3.1"
bytes = "1.0.0"
fap = "0.2.1"
futures = "0.3"
log = "0.4.11"
tokio = { version = "1.0.0", default-features=false, features=["macros", "net", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.2", features = ["codec"] }

[dev-dependencies]
arguments = "0.6.2"
pretty_env_logger = "0.4"
